--- a/SendSlackMessage.csproj
+++ b/SendSlackMessage.csproj
@@ -40,6 +40,10 @@
     <Reference Include="RestSharp">
       <HintPath>..\Rock\bin\RestSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Rock, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bricksandmortar.studio.com_Rockit\RockWeb\Bin\Rock.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -50,12 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Rock\Workflow\Action\SendSlackMessage.cs">
-      <Link>Workflow\Action\SendSlackMessage.cs</Link>
-    </Compile>
     <Compile Include="Migrations\001_SlackWebHook.cs" />
     <Compile Include="SystemGuid\SlackGuid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflow\Action\SendSlackMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
