--- a/SendSlackMessage.csproj
+++ b/SendSlackMessage.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>com.bricksandmortar.SendSlackMessage</RootNamespace>
-    <AssemblyName>SendSlackMessage</AssemblyName>
+    <AssemblyName>com.bricksandmortar.SendSlackMessage</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
