--- a/com.bricksandmortarstudio.Slack.csproj
+++ b/com.bricksandmortarstudio.Slack.csproj
@@ -31,18 +31,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\Rock\bin\EntityFramework.dll</HintPath>
+      <HintPath>..\Rock\RockWeb\Bin\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Rock\bin\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\Rock\RockWeb\Bin\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="RestSharp">
-      <HintPath>..\Rock\bin\RestSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Rock, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\bricksandmortar.studio.com_Rockit\RockWeb\Bin\Rock.dll</HintPath>
+      <HintPath>..\Rock\RockWeb\Bin\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -55,9 +50,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Migrations\001_SlackWebHook.cs" />
+    <Compile Include="Model\Field.cs" />
+    <Compile Include="Model\Group.cs" />
+    <Compile Include="Model\Attachment.cs" />
+    <Compile Include="Model\Message.cs" />
     <Compile Include="SystemGuid\SlackGuid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workflow\Action\SendSlackMessage.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rock\Rock\Rock.csproj">
+      <Project>{8f8c2a79-24f4-4157-8b99-45f75fa85799}</Project>
+      <Name>Rock</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
